finish create post
